--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ image: /media/img/blog/2020-03-30-community-care.jpg
   {% for post in site.posts limit:10 %}
     <li>
       <p class="blogtitle"><a href="{{ post.url }}">{{ post.title }}</a><span class="blogdate">| posted <abbr class="timeago" title="{{ post.date }}">{{ post.date }}</abbr></span></p>
-      <p class="excerpt">{{ post.excerpt }}&nbsp;<a href="{{ post.url }}">read more</a></p>
+      <p class="excerpt">{{ post.excerpt }}&nbsp;<a href="{{ post.url }}">Read more.</a></p>
     </li>
   {% endfor %}
 </ul>
