--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 layout: post_notitle
 title: OpenNews — Connecting the journalism-tech network that collaborates on open technologies and processes within journalism
 excerpt: 
-image: /media/img/blog/2020-03-30-community-care.jpg
+image: /media/img/blog/end-of-year-2020.png
 ---
 
-<p><a name="srccon-heart" href="https://srccon.org/srccon-heart-2020/"><img src="/media/img/srccon_heart_watercolor.jpg" alt="the event logo for SRCCON:HEART, which takes place online on December 17, 2020" style="width: 100%;"></a></p>
+<p><a href="https://opennews.org/blog/year-end-change-2020/"><img src="/media/img/end-of-year-2020.png" alt="Screenshot of SRCCON:Heart participants." style="width: 100%;"></a></p>
+<p class="caption" style="text-align: left; margin-right: 0px; margin-top: -20px;">Screenshot of SRCCON:❤️participants.</p>
 
-<h2>A community celebration: What—and who—Helped us get through this year</h2>
+<h2>What we did together in 2020</h2>
 
-<p class="bodybig" style="margin-bottom: 3em;">We’re going to close down 2020 with some time to party, reflect, relax, and catch up with each other. Join us for a day of activities and celebration of YOU, the people who lead and sustain this work of transforming journalism. <a href="https://srccon.org/srccon-heart-2020/">Find out more about SRCCON:❤️</a> and <a href="https://www.eventbrite.com/e/130622460295/">grab your ticket</a>, which is free for OpenNews sustainers.</p>
+<p class="bodybig">As we close down 2020, we’re reflecting on how we got through it together and what we were able to do for and with each other. As one community member said, this community sets “the bar for how to be wonderful, gracious, thoughtful change agents in journalism.” <a href="https://opennews.org/blog/year-end-change-2020/">Read more about our 2020 together.</a></p>
 
-
-
-
+<p class="bodybig" style="margin-bottom: 3em;">If OpenNews was a part of what helped you get through this year, please consider <a href="https://opennews.org/donate">becoming a sustainer</a> to support this work.
+</p>
 
 <h2 style="margin-top: 30px;">How we’re supporting each other</h2>
 
