--- a/projects/speaker-rider/index.html
+++ b/projects/speaker-rider/index.html
@@ -2,7 +2,32 @@
 <html lang="en">
   <head>
 		<!-- Meta.svelte -->
-		<title>Speaker Rider for Meaningfully Inclusive Events</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><meta name="description" content="10 baseline criteria to hold events and organizations accountable"><meta name="news_keywords" content="speaker, rider, inclusive, diverse, events, organizations, conference, speaking, criteria, 10"><meta property="og:title" content="Speaker Rider for Meaningfully Inclusive Events"><meta property="og:site_name" content="Open News"><meta property="og:url" content="https://opennews.org/projects/speaker-rider/"><meta property="og:description" content="10 baseline criteria to hold events and organizations accountable"><meta property="og:type" content="article"><meta property="og:locale" content="en_US"><meta property="og:image" content="assets/images/social-facebook.jpg"><meta property="og:image:type" content="image"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="600"><meta property="og:image:alt" content="Title card image with the words 'Speaker Rider for Meaningfully Inclusive Events'"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:site" content=""><meta name="twitter:creator" content="@jadiehm"><meta name="twitter:title" content="Speaker Rider for Meaningfully Inclusive Events"><meta name="twitter:description" content="10 baseline criteria to hold events and organizations accountable"><meta name="twitter:image:src" content="assets/images/social-twitter.jpg"><meta name="twitter:image:alt" content="Title card image with the words 'Speaker Rider for Meaningfully Inclusive Events'"><meta name="robots" content="max-image-preview:large"><link rel="canonical" href="">
+		<title>Speaker Rider for Meaningfully Inclusive Events</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="description" content="10 baseline criteria to hold events and organizations accountable">
+		<meta name="news_keywords" content="speaker, rider, inclusive, diverse, events, organizations, conference, speaking, criteria, 10">
+		<meta property="og:title" content="Speaker Rider for Meaningfully Inclusive Events">
+		<meta property="og:site_name" content="OpenNews">
+		<meta property="og:url" content="https://opennews.org/projects/speaker-rider/">
+		<meta property="og:description" content="10 baseline criteria to hold events and organizations accountable">
+		<meta property="og:type" content="article">
+		<meta property="og:locale" content="en_US">
+		<meta property="og:image" content="https://opennews.org/projects/speaker-rider/assets/images/social-facebook.jpg">
+		<meta property="og:image:type" content="image">
+		<meta property="og:image:width" content="1200">
+		<meta property="og:image:height" content="600">
+		<meta property="og:image:alt" content="Title card image with the words 'Speaker Rider for Meaningfully Inclusive Events'">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@opennews">
+		<meta name="twitter:creator" content="@jadiehm">
+		<meta name="twitter:title" content="Speaker Rider for Meaningfully Inclusive Events">
+		<meta name="twitter:description" content="10 baseline criteria to hold events and organizations accountable">
+		<meta name="twitter:image:src" content="https://opennews.org/projects/speaker-rider/assets/images/social-twitter.jpg">
+		<meta name="twitter:image:alt" content="Title card image with the words 'Speaker Rider for Meaningfully Inclusive Events'">
+		<meta name="robots" content="max-image-preview:large">
+		<link rel="canonical" href="https://opennews.org/projects/speaker-rider/">
 		<link rel="stylesheet" href="assets/styles/normalize.css?version=1611760996416" />
 		<!-- Pudding fonts -->
 		<link rel="stylesheet" href="assets/styles/font.css?version=1611760996416" />
